Add invoke :display_names for KnownEntity

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,6 +8,7 @@ AllCops:
     - bin/**/*
     - db/**/*
     - Guardfile
+    - app/views/endpoint_entities/index.json.jbuilder
 
 AbcSize:
   Exclude:
